--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.25'
+    compile 'me.wcy:lrcview:1.4.2'
 }
