--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+            android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,13 +22,14 @@
         </activity>
         <activity android:name=".activity.SearchMusicActivity" />
         <activity android:name=".activity.PlayActivity" />
+        <activity android:name=".activity.LocalMusicActivity" />
+        <activity android:name=".activity.ScanMusicActivity" />
 
         <service
             android:name=".service.PlayService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.ScanMusicActivity"></activity>
     </application>
 
 </manifest>
