--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +22,6 @@
         </activity>
         <activity android:name=".activity.SearchMusicActivity" />
         <activity android:name=".activity.PlayActivity" />
-        <activity android:name=".activity.LocalMusicActivity" />
         <activity android:name=".activity.ScanMusicActivity" />
 
         <service
@@ -31,6 +29,14 @@
             android:enabled="true"
             android:exported="true" />
 
+        <receiver
+            android:name=".receiver.MusicBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <!--<intent-filter>-->
+                <!--<action android:name="com.nilin.etherealmusic.play" />-->
+            <!--</intent-filter>-->
+        </receiver>
     </application>
 
 </manifest>
