--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.nilin.etherealmuisc"
         minSdkVersion 19
@@ -43,9 +43,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.31'
     compile 'org.greenrobot:greendao:3.2.2'
     compile "org.jetbrains.anko:anko-commons:0.10.2"
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.17'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.20'
 }
