--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         </receiver>
 
         <receiver
-            android:name=".audio.PlayerService.HeadsetButtonReceiver">
+            android:name=".receiver.HeadsetButtonReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
