--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.0'
 
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        jcenter()
         google()
     }
-
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
     }
 }
 
@@ -17,6 +16,8 @@ allprojects {
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven { url "https://jitpack.io" }
+        jcenter()
+        mavenCentral()
         google()
     }
 }
