--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation "org.jetbrains.anko:anko-commons:0.10.7"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation 'org.litepal.android:kotlin:3.0.0'
 }
